Added more Filters

--- a/pokedex.html
+++ b/pokedex.html
@@ -16,12 +16,18 @@
   </head>
 
   <body style="text-align: center;">
-    <h1>National Pokedex</h1>
+    <h1>National Pokédex</h1>
     <div>
       <label for="name_input">Name</label>
       <input id="name_input" type="text" placeholder="name"/>
+      <label for="number_input">Number</label>
+      <input id="number_input" type="text" placeholder="number"/>
       <label for="type_input">Type</label>
       <input id="type_input" type="text" placeholder="type"/>
+      <label for="category_input">Category</label>
+      <input id="category_input" type="text" placeholder="category"/>
+      <label for="region_input">Region</label>
+      <input id="region_input" type="text" placeholder="region"/>
       <button id=searchButton>Search</button>
       
     </div>
