--- a/pokedex.html
+++ b/pokedex.html
@@ -17,7 +17,7 @@
 
   <body style="text-align: center;">
     <h1>National Pokédex</h1>
-    <!-- <a href="formdex.html">All Forms</a> -->
+    <a href="formdex.html">All Forms</a>
     <div>
       <label for="name_input">Name</label>
       <input id="name_input" type="text" placeholder="name"/>
