Made more clear

--- a/formdex.html
+++ b/formdex.html
@@ -16,8 +16,8 @@
   </head>
 
   <body style="text-align: center;">
-    <h1>National Pokédex</h1>
-    <a href="pokedex.html">Defaults</a>
+    <h1>National Pokédex (Forms)</h1>
+    <a href="pokedex.html">Return to Defaults</a>
     <div>
       <label for="name_input">Name</label>
       <input id="name_input" type="text" placeholder="name"/>
