--- a/pokedex.html
+++ b/pokedex.html
@@ -29,6 +29,11 @@
       <input id="category_input" type="text" placeholder="category"/>
       <label for="region_input">Region</label>
       <input id="region_input" type="text" placeholder="region"/>
+      </br>
+      <label for="height_input">Height</label>
+      <input id="height_input" type="height" placeholder="height"/>
+      <label for="weight_input">Weight</label>
+      <input id="weight_input" type="weight" placeholder="weight"/>
       <button id=searchButton>Search</button>
       
     </div>
