--- a/pokedex.html
+++ b/pokedex.html
@@ -34,6 +34,8 @@
       <input id="height_input" type="height" placeholder="height"/>
       <label for="weight_input">Weight</label>
       <input id="weight_input" type="weight" placeholder="weight"/>
+      <label for="favorites_input">Favorites</label>
+      <input id="favorites_input" type="favorites" placeholder="True or False"/>
       <button id=searchButton>Search</button>
       
     </div>
