--- a/formdex.html
+++ b/formdex.html
@@ -17,7 +17,7 @@
 
   <body style="text-align: center;">
     <h1>National Pokédex (Forms)</h1>
-    <a href="pokedex.html">Return to Defaults</a>
+    <a href="index.html">Return to Defaults</a>
     <div>
       <label for="name_input">Name</label>
       <input id="name_input" type="text" placeholder="name"/>
