Added Alphabetical and Numerical sorting

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <label for="favorites_input">Favorites</label>
       <input id="favorites_input" type="favorites" placeholder="True or False"/>
       <button id=searchButton>Search</button>
+      </br>
+      <button id="sortAlpha">Sort Alphabetically</button>
+      <button id="sortNum">Sort Numerically</button>
       
     </div>
     <div id=container></div>
