Added Sort by Height or Weight

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       </br>
       <button id="sortAlpha">Sort Alphabetically</button>
       <button id="sortNum">Sort Numerically</button>
+      <button id="sortHeight">Sort by Height</button>
+      <button id="sortWeight">Sort by Weight</button>
       
     </div>
     <div id=container></div>
