--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">  
   </head>
 
   <body style="text-align: center;">
