Legends Arceus Update

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
       <input id="number_input" type="text" placeholder="number"/>
       <label for="type_input">Type</label>
       <input id="type_input" type="text" placeholder="type"/>
+      </br>
       <label for="category_input">Category</label>
       <input id="category_input" type="text" placeholder="category"/>
       <label for="region_input">Region</label>
       <input id="region_input" type="text" placeholder="region"/>
+      <label for="gen_input">Generation</label>
+      <input id="gen_input" type="text" placeholder="Gen #"/>
       </br>
       <label for="height_input">Height</label>
       <input id="height_input" type="height" placeholder="height"/>
@@ -44,7 +47,10 @@
       <button id="sortNum">Sort Numerically</button>
       <button id="sortHeight">Sort by Height</button>
       <button id="sortWeight">Sort by Weight</button>
-      
+      </br>
+      <button id="saveFaves">Save Favorites</button>
+      <button id="loadFaves">Load Favorites</button>
+
     </div>
     <div id=container></div>
     <script src="code.js"></script>
