Added Caught Functionality

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <input id="weight_input" type="weight" placeholder="weight"/>
       <label for="favorites_input">Favorites</label>
       <input id="favorites_input" type="favorites" placeholder="True or False"/>
+      <label for="caught_input">Caught</label>
+      <input id="caught_input" type="caught" placeholder="True or False"/>
       <button id=searchButton>Search</button>
       </br>
       <button id="sortAlpha">Sort Alphabetically</button>
@@ -48,8 +50,9 @@
       <button id="sortHeight">Sort by Height</button>
       <button id="sortWeight">Sort by Weight</button>
       </br>
-      <button id="saveFaves">Save Favorites</button>
-      <button id="loadFaves">Load Favorites</button>
+      <button id="saveFaves">Save Data</button>
+      <button id="loadFaves">Load Data</button>
+      <button id="percentCaught">Pokédex Completion</button>
 
     </div>
     <div id=container></div>
