Fixed load time issue by only loading 50 at a time

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     </div>
     <div id=container></div>
+    <button id="morePkmn">More Pokémon</button>
     <script src="code.js"></script>
   </body>
 </html>
