Added Abilities, Fixed More button and type colors, added fraction to completion button, and added error messages

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <input id="region_input" type="text" placeholder="region"/>
       <label for="gen_input">Generation</label>
       <input id="gen_input" type="text" placeholder="Gen #"/>
+      <label for="ability_input">Ability</label>
+      <input id="ability_input" type="text" placeholder="ability"/>
       </br>
       <label for="height_input">Height</label>
       <input id="height_input" type="height" placeholder="height"/>
