Revamped Forms Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body style="text-align: center;">
     <h1>National Pokédex</h1>
-    <a href="formdex.html">See All Forms</a>
+    <a href="formdex.html">See Alt Forms</a>
     <div>
       <label for="name_input">Name</label>
       <input id="name_input" type="text" placeholder="name"/>
