--- a/formdex.html
+++ b/formdex.html
@@ -27,19 +27,38 @@
       <input id="number_input" type="text" placeholder="number"/>
       <label for="type_input">Type</label>
       <input id="type_input" type="text" placeholder="type"/>
+      </br>
       <label for="category_input">Category</label>
       <input id="category_input" type="text" placeholder="category"/>
       <label for="region_input">Region</label>
       <input id="region_input" type="text" placeholder="region"/>
+      <label for="gen_input">Generation</label>
+      <input id="gen_input" type="text" placeholder="Gen #"/>
+      <label for="ability_input">Ability</label>
+      <input id="ability_input" type="text" placeholder="ability"/>
       </br>
       <label for="height_input">Height</label>
       <input id="height_input" type="height" placeholder="height"/>
       <label for="weight_input">Weight</label>
       <input id="weight_input" type="weight" placeholder="weight"/>
+      <label for="favorites_input">Favorites</label>
+      <input id="favorites_input" type="favorites" placeholder="True or False"/>
+      <label for="caught_input">Caught</label>
+      <input id="caught_input" type="caught" placeholder="True or False"/>
       <button id=searchButton>Search</button>
-      
+      </br>
+      <button id="sortAlpha">Sort Alphabetically</button>
+      <button id="sortNum">Sort Numerically</button>
+      <button id="sortHeight">Sort by Height</button>
+      <button id="sortWeight">Sort by Weight</button>
+      </br>
+      <button id="saveFaves">Save Data</button>
+      <button id="loadFaves">Load Data</button>
+      <button id="percentCaught">Pokédex Completion</button>
+
     </div>
     <div id=container></div>
+    <button id="morePkmn">More Pokémon</button>
     <script src="forms.js"></script>
   </body>
 </html>
