--- a/red.html
+++ b/red.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>National Pokedex</title>
+    <title>Kanto Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,12 +18,12 @@
   </head>
 
   <body style="text-align: center;">
-    <h1>National Pokédex</h1>
+    <h1 style="background-color: #ff1111; border: 5px solid darkblue; border-radius: 25px;">Pokémon Red Version</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
+      <option value="red.html">Red</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
-      <option value="red.html">Red</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
     </select>
@@ -50,9 +50,6 @@
         <option value="rock">Rock</option>
         <option value="ghost">Ghost</option>
         <option value="dragon">Dragon</option>
-        <option value="dark">Dark</option>
-        <option value="steel">Steel</option>
-        <option value="fairy">Fairy</option>
       </select>
       </br>
       <label for="category_input">Category</label>
@@ -61,8 +58,6 @@
       <input id="region_input" type="text" placeholder="region"/>
       <label for="gen_input">Generation</label>
       <input id="gen_input" type="text" placeholder="Gen #"/>
-      <label for="ability_input">Ability</label>
-      <input id="ability_input" type="text" placeholder="ability"/>
       </br>
       <label for="height_input">Height</label>
       <input id="height_input" type="height" placeholder="height"/>
@@ -94,6 +89,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="code.js"></script>
+    <script src="red.js"></script>
   </body>
 </html>
