--- a/crystal.html
+++ b/crystal.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Kanto Pokedex</title>
+    <title>Johto Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,17 +18,17 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #1111ff; border: 5px solid darkblue; border-radius: 25px;">Pokémon Blue Version</h1>
+    <h1 style="background-color: #4fd9ff; border: 5px solid darkblue; border-radius: 25px;">Pokémon Crystal Version</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="blue.html">Blue</option>
+      <option value="crystal.html">Crystal</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
+      <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
       <option value="silver.html">Silver</option>
-      <option value="crystal.html">Crystal</option>
     </select>
     <div>
       <label for="name_input">Name</label>
@@ -53,6 +53,8 @@
         <option value="rock">Rock</option>
         <option value="ghost">Ghost</option>
         <option value="dragon">Dragon</option>
+        <option value="dark">Dark</option>
+        <option value="steel">Steel</option>
       </select>
       </br>
       <label for="category_input">Category</label>
@@ -92,6 +94,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="blue.js"></script>
+    <script src="crystal.js"></script>
   </body>
 </html>
