--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <option value="red.html">Red</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
+      <option value="gold.html">Gold</option>
+      <option value="silver.html">Silver</option>
+      <option value="crystal.html">Crystal</option>
     </select>
     <div>
       <label for="name_input">Name</label>
