Added Gen 3 Regional Dexes

--- a/crystal.html
+++ b/crystal.html
@@ -18,7 +18,7 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #4fd9ff; border: 5px solid darkblue; border-radius: 25px;">Pokémon Crystal Version</h1>
+    <h1 style="background-color: #4fd9ff; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Crystal Version</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
       <option value="crystal.html">Crystal</option>
@@ -29,6 +29,11 @@
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
       <option value="silver.html">Silver</option>
+      <option value="ruby.html">Ruby</option>
+      <option value="sapphire.html">Sapphire</option>
+      <option value="firered.html">FireRed</option>
+      <option value="leafgreen.html">LeafGreen</option>
+      <option value="emerald.html">Emerald</option>
     </select>
     <div>
       <label for="name_input">Name</label>
