--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <option value="gold.html">Gold</option>
       <option value="silver.html">Silver</option>
       <option value="crystal.html">Crystal</option>
+      <option value="ruby.html">Ruby</option>
+      <option value="sapphire.html">Sapphire</option>
+      <option value="firered.html">FireRed</option>
+      <option value="leafgreen.html">LeafGreen</option>
+      <option value="emerald.html">Emerald</option>
     </select>
     <div>
       <label for="name_input">Name</label>
