--- a/firered.html
+++ b/firered.html
@@ -34,6 +34,11 @@
       <option value="sapphire.html">Sapphire</option>
       <option value="leafgreen.html">LeafGreen</option>
       <option value="emerald.html">Emerald</option>
+      <option value="diamond.html">Diamond</option>
+      <option value="pearl.html">Pearl</option>
+      <option value="platinum.html">Platinum</option>
+      <option value="heartgold.html">HeartGold</option>
+      <option value="soulsilver.html">SoulSilver</option>
     </select>
     <div>
       <label for="name_input">Name</label>
