--- a/platinum.html
+++ b/platinum.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Johto Pokedex</title>
+    <title>Sinnoh Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,16 +18,17 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #c0c0c0; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Silver Version</h1>
+    <h1 style="background-color: #999999; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Platinum Version</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="silver.html">Silver</option>
+      <option value="platinum.html">Platinum</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
+      <option value="silver.html">Silver</option>
       <option value="crystal.html">Crystal</option>
       <option value="ruby.html">Ruby</option>
       <option value="sapphire.html">Sapphire</option>
@@ -36,7 +37,6 @@
       <option value="emerald.html">Emerald</option>
       <option value="diamond.html">Diamond</option>
       <option value="pearl.html">Pearl</option>
-      <option value="platinum.html">Platinum</option>
       <option value="heartgold.html">HeartGold</option>
       <option value="soulsilver.html">SoulSilver</option>
     </select>
@@ -104,6 +104,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="silver.js"></script>
+    <script src="platinum.js"></script>
   </body>
 </html>
