Added Gen V Regional Dexes

--- a/heartgold.html
+++ b/heartgold.html
@@ -39,6 +39,10 @@
       <option value="pearl.html">Pearl</option>
       <option value="platinum.html">Platinum</option>
       <option value="soulsilver.html">SoulSilver</option>
+      <option value="black.html">Black</option>
+      <option value="white.html">White</option>
+      <option value="black2.html">Black 2</option>
+      <option value="white2.html">White 2</option>
     </select>
     <div>
       <label for="name_input">Name</label>
