--- a/black.html
+++ b/black.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Johto Pokedex</title>
+    <title>Unova Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,15 +18,16 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #daa520; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Gold Version</h1>
+    <h1 style="background-color: #444444; border: 5px solid darkblue; color: white; border-radius: 25px;">Pokémon Black Version</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="gold.html">Gold</option>
+      <option value="black.html">Black</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
+      <option value="gold.html">Gold</option>
       <option value="silver.html">Silver</option>
       <option value="crystal.html">Crystal</option>
       <option value="ruby.html">Ruby</option>
@@ -39,7 +40,6 @@
       <option value="platinum.html">Platinum</option>
       <option value="heartgold.html">HeartGold</option>
       <option value="soulsilver.html">SoulSilver</option>
-      <option value="black.html">Black</option>
       <option value="white.html">White</option>
       <option value="black2.html">Black 2</option>
       <option value="white2.html">White 2</option>
@@ -108,6 +108,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="gold.js"></script>
+    <script src="black.js"></script>
   </body>
 </html>
