--- a/alphasapphire.html
+++ b/alphasapphire.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Johto Pokedex</title>
+    <title>Hoenn Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,16 +18,17 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #c0c0c0; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Silver Version</h1>
+    <h1 style="background-color: #26649c; border: 5px solid darkblue; color: white; border-radius: 25px;">Pokémon Alpha Sapphire</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="silver.html">Silver</option>
+      <option value="alphasapphire.html">Alpha Sapphire</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
+      <option value="silver.html">Silver</option>
       <option value="crystal.html">Crystal</option>
       <option value="ruby.html">Ruby</option>
       <option value="sapphire.html">Sapphire</option>
@@ -46,7 +47,6 @@
       <option value="x.html">X</option>
       <option value="y.html">Y</option>
       <option value="omegaruby.html">Omega Ruby</option>
-      <option value="alphasapphire.html">Alpha Sapphire</option>
     </select>
     <div>
       <label for="name_input">Name</label>
@@ -73,6 +73,7 @@
         <option value="dragon">Dragon</option>
         <option value="dark">Dark</option>
         <option value="steel">Steel</option>
+        <option value="fairy">Fairy</option>
       </select>
       </br>
       <label for="category_input">Category</label>
@@ -112,6 +113,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="silver.js"></script>
+    <script src="alphasapphire.js"></script>
   </body>
 </html>
