--- a/heartgold.html
+++ b/heartgold.html
@@ -43,6 +43,10 @@
       <option value="white.html">White</option>
       <option value="black2.html">Black 2</option>
       <option value="white2.html">White 2</option>
+      <option value="x.html">X</option>
+      <option value="y.html">Y</option>
+      <option value="omegaruby.html">Omega Ruby</option>
+      <option value="alphasapphire.html">Alpha Sapphire</option>
     </select>
     <div>
       <label for="name_input">Name</label>
