--- a/omegaruby.html
+++ b/omegaruby.html
@@ -47,6 +47,12 @@
       <option value="x.html">X</option>
       <option value="y.html">Y</option>
       <option value="alphasapphire.html">Alpha Sapphire</option>
+      <option value="sun.html">Sun</option>
+      <option value="moon.html">Moon</option>
+      <option value="ultrasun.html">Ultra Sun</option>
+      <option value="ultramoon.html">Ultra Moon</option>
+      <option value="letsgopikachu.html">Let's Go, Pikachu!</option>
+      <option value="letsgoeevee.html">Let's Go, Eevee!</option>
     </select>
     <div>
       <label for="name_input">Name</label>
