--- a/sun.html
+++ b/sun.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Unova Pokedex</title>
+    <title>Alola Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,10 +18,10 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #444444; border: 5px solid darkblue; color: white; border-radius: 25px;">Pokémon Black Version</h1>
+    <h1 style="background-color: #f1912b; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Sun</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="black.html">Black</option>
+      <option value="sun.html">Sun</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
@@ -40,6 +40,7 @@
       <option value="platinum.html">Platinum</option>
       <option value="heartgold.html">HeartGold</option>
       <option value="soulsilver.html">SoulSilver</option>
+      <option value="black.html">Black</option>
       <option value="white.html">White</option>
       <option value="black2.html">Black 2</option>
       <option value="white2.html">White 2</option>
@@ -47,7 +48,6 @@
       <option value="y.html">Y</option>
       <option value="omegaruby.html">Omega Ruby</option>
       <option value="alphasapphire.html">Alpha Sapphire</option>
-      <option value="sun.html">Sun</option>
       <option value="moon.html">Moon</option>
       <option value="ultrasun.html">Ultra Sun</option>
       <option value="ultramoon.html">Ultra Moon</option>
@@ -79,6 +79,7 @@
         <option value="dragon">Dragon</option>
         <option value="dark">Dark</option>
         <option value="steel">Steel</option>
+        <option value="fairy">Fairy</option>
       </select>
       </br>
       <label for="category_input">Category</label>
@@ -118,6 +119,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="black.js"></script>
+    <script src="sun.js"></script>
   </body>
 </html>
