--- a/shiningpearl.html
+++ b/shiningpearl.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Kalos Pokedex</title>
+    <title>Sinnoh Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,10 +18,10 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="background-color: #025da6; border: 5px solid darkblue; color: white; border-radius: 25px;">Pokémon X</h1>
+    <h1 style="background-color: #da7d99; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon Shining Pearl</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="x.html">X</option>
+      <option value="shiningpearl.html">Shining Pearl</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
@@ -44,6 +44,7 @@
       <option value="white.html">White</option>
       <option value="black2.html">Black 2</option>
       <option value="white2.html">White 2</option>
+      <option value="x.html">X</option>
       <option value="y.html">Y</option>
       <option value="omegaruby.html">Omega Ruby</option>
       <option value="alphasapphire.html">Alpha Sapphire</option>
@@ -58,7 +59,6 @@
       <option value="isleofarmor.html">Isle of Armor</option>
       <option value="crowntundra.html">Crown Tundra</option>
       <option value="brilliantdiamond.html">Brilliant Diamond</option>
-      <option value="shiningpearl.html">Shining Pearl</option>
       <option value="legendsarceus.html">Legends: Arceus</option>
     </select>
     <div>
@@ -126,6 +126,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="x.js"></script>
+    <script src="shiningpearl.js"></script>
   </body>
 </html>
