--- a/ultramoon.html
+++ b/ultramoon.html
@@ -53,6 +53,13 @@
       <option value="ultrasun.html">Ultra Sun</option>
       <option value="letsgopikachu.html">Let's Go, Pikachu!</option>
       <option value="letsgoeevee.html">Let's Go, Eevee!</option>
+      <option value="sword.html">Sword</option>
+      <option value="shield.html">Shield</option>
+      <option value="isleofarmor.html">Isle of Armor</option>
+      <option value="crowntundra.html">Crown Tundra</option>
+      <option value="brilliantdiamond.html">Brilliant Diamond</option>
+      <option value="shiningpearl.html">Shining Pearl</option>
+      <option value="legendsarceus.html">Legends: Arceus</option>
     </select>
     <div>
       <label for="name_input">Name</label>
