Added Green color to HOME dex

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 style="border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon HOME</h1>
+    <h1 style="background-color: #11bb11; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon HOME</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
       <option value="home.html">HOME</option>
