--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
         <option value="Sand Rush">Sand Rush</option>
         <option value="Sand Spit">Sand Spit</option>
         <option value="Sand Stream">Sand Stream</option>
-        <option value="Sand Veil">Sand Veil/option>
+        <option value="Sand Veil">Sand Veil</option>
         <option value="Sap Sipper">Sap Sipper</option>
         <option value="Schooling">Schooling</option>
         <option value="Scrappy">Scrappy</option>
