Added color filter and fixed Abra evo line bug

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <option value="Mankey">Mankey</option>
         <option value="Growlithe">Growlithe</option>
         <option value="Poliwag">Poliwag</option>
-        <option value="Abra">Abra</option>
+        <option value="Abra1">Abra</option>
         <option value="Machop">Machop</option>
         <option value="Bellsprout">Bellsprout</option>
         <option value="Tentacool">Tentacool</option>
@@ -968,6 +968,20 @@
         <option value="Wonder Skin">Wonder Skin</option>
         <option value="Zen Mode">Zen Mode</option>
         <option value="Zero to Hero">Zero to Hero</option>
+      </select>
+      <label for="color_input">Color</label>
+      <select name="color" id="color_input">
+        <option value=""></option>
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+        <option value="yellow">Yellow</option>
+        <option value="pink">Pink</option>
+        <option value="purple">Purple</option>
+        <option value="brown">Brown</option>
+        <option value="gray">Gray</option>
+        <option value="white">White</option>
+        <option value="black">Black</option>
       </select>
       </br>
       <label for="height_input">Height</label>
