Added stage filter

--- a/index.html
+++ b/index.html
@@ -645,6 +645,13 @@
         <option value="Cross-Gen">Cross-Gen</option>
         <option value="Convergent">Convergent</option>
       </select>
+      <label for="stage_input">Stage</label>
+      <select name="stage" id="stage_input">
+        <option value=""></option>
+        <option value="First Stage">First Stage</option>
+        <option value="Second Stage">Second Stage</option>
+        <option value="Third Stage">Third Stage</option>
+      </select>
       </br>
       <label for="category_input">Category</label>
       <input id="category_input" type="text" placeholder="category"/>
