Indigo Disk Update

--- a/formdex.html
+++ b/formdex.html
@@ -302,6 +302,7 @@
         <option value="Plus">Plus</option>
         <option value="Poison Heal">Poison Heal</option>
         <option value="Poison Point">Poison Point</option>
+        <option value="Poison Puppeteer">Poison Puppeteer</option>
         <option value="Poison Touch">Poison Touch</option>
         <option value="Power Construct">Power Construct</option>
         <option value="Power of Alchemy">Power of Alchemy</option>
@@ -396,6 +397,9 @@
         <option value="Tangling Hair">Tangling Hair</option>
         <option value="Technician">Technician</option>
         <option value="Telepathy">Telepathy</option>
+        <option value="Tera Shell">Tera Shell</option>
+        <option value="Tera Shift">Tera Shift</option>
+        <option value="Teraform Zero">Teraform Zero</option>
         <option value="Teravolt">Teravolt</option>
         <option value="Thermal Exchange">Thermal Exchange</option>
         <option value="Thick Fat">Thick Fat</option>
