--- a/indigodisk.html
+++ b/indigodisk.html
@@ -18,7 +18,7 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 id="heading" style="background-color: #07445F; border: 5px solid darkblue; color: white; border-radius: 25px;"><img id="mascot" src="images/Terapagos.png" style="height:50px">The Indigo Disk<img id="mascot" src="images/Terapagos.png" style="height:50px"></h1>
+    <h1 id="heading" style="background-color: #07445F; border: 5px solid darkblue; color: white; border-radius: 25px;"><img id="mascot" src="images/1024Terapagos.png" style="height:50px">The Indigo Disk<img id="mascot" src="images/1024Terapagos.png" style="height:50px"></h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
       <option value="indigodisk.html">Indigo Disk</option>
