--- a/index.html
+++ b/index.html
@@ -630,6 +630,12 @@
         <option value="Munkidori">Munkidori</option>
         <option value="Fezandipiti">Fezandipiti</option>
         <option value="Ogerpon">Ogerpon</option>
+        <option value="GougingFire">Gouging Fire</option>
+        <option value="RagingBolt">Raging Bolt</option>
+        <option value="IronBoulder">Iron Boulder</option>
+        <option value="IronCrown">Iron Crown</option>
+        <option value="Terapagos">Terapagos</option>
+        <option value="Pecharunt">Pecharunt</option>
       </select>
       <label for="tag_input">Tags</label>
       <select name="tag" id="tag_input">
@@ -844,6 +850,7 @@
         <option value="Plus">Plus</option>
         <option value="Poison Heal">Poison Heal</option>
         <option value="Poison Point">Poison Point</option>
+        <option value="Poison Puppeteer">Poison Puppeteer</option>
         <option value="Poison Touch">Poison Touch</option>
         <option value="Power Construct">Power Construct</option>
         <option value="Power of Alchemy">Power of Alchemy</option>
@@ -938,6 +945,9 @@
         <option value="Tangling Hair">Tangling Hair</option>
         <option value="Technician">Technician</option>
         <option value="Telepathy">Telepathy</option>
+        <option value="Tera Shell">Tera Shell</option>
+        <option value="Tera Shift">Tera Shift</option>
+        <option value="Teraform Zero">Teraform Zero</option>
         <option value="Teravolt">Teravolt</option>
         <option value="Thermal Exchange">Thermal Exchange</option>
         <option value="Thick Fat">Thick Fat</option>
