--- a/legendsza.html
+++ b/legendsza.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Kalos Pokedex</title>
+    <title>Lumiose Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,10 +18,10 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 id="heading" style="background-color: #ea1a3e; border: 5px solid darkblue; color: black; border-radius: 25px;"><img id="mascot" src="images/717Yveltal.png" style="height:50px">Pokémon Y<img id="mascot" src="images/717Yveltal.png" style="height:50px"></h1>
+    <h1 id="heading" style="background-color: #93D99E; border: 5px solid darkblue; color: black; border-radius: 25px;"><img id="mascot" src="images/718Zygarde.png" style="height:50px">Pokémon Legends: Z-A<img id="mascot" src="images/718Zygarde.png" style="height:50px"></h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
-      <option value="y.html">Y</option>
+      <option value="legendsza.html">Legends: Z-A</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="home.html">HOME</option>
@@ -47,6 +47,7 @@
       <option value="black2.html">Black 2</option>
       <option value="white2.html">White 2</option>
       <option value="x.html">X</option>
+      <option value="y.html">Y</option>
       <option value="omegaruby.html">Omega Ruby</option>
       <option value="alphasapphire.html">Alpha Sapphire</option>
       <option value="sun.html">Sun</option>
@@ -66,7 +67,6 @@
       <option value="violet.html">Violet</option>
       <option value="tealmask.html">Teal Mask</option>
       <option value="indigodisk.html">Indigo Disk</option>
-      <option value="legendsza.html">Legends: Z-A</option>
     </select>
     <div>
       <label for="name_input">Name</label>
@@ -109,6 +109,9 @@
         <option value="04">Gen IV</option>
         <option value="05">Gen V</option>
         <option value="06">Gen VI</option>
+        <option value="07">Gen VII</option>
+        <option value="08">Gen VIII</option>
+        <option value="09">Gen IX</option>
       </select>
       </br>
       <label for="height_input">Height</label>
@@ -141,6 +144,6 @@
     </div>
     <div id=container></div>
     <button id="morePkmn">More Pokémon</button>
-    <script src="y.js"></script>
+    <script src="legendsza.js"></script>
   </body>
 </html>
