--- a/yellow.html
+++ b/yellow.html
@@ -26,6 +26,7 @@
       <option value="formdex.html">Alternate Forms</option>
       <option value="home.html">HOME</option>
       <option value="red.html">Red</option>
+      <option value="green.html">Green</option>
       <option value="blue.html">Blue</option>
       <option value="gold.html">Gold</option>
       <option value="silver.html">Silver</option>
@@ -65,6 +66,7 @@
       <option value="violet.html">Violet</option>
       <option value="tealmask.html">Teal Mask</option>
       <option value="indigodisk.html">Indigo Disk</option>
+      <option value="legendsza.html">Legends: Z-A</option>
     </select>
     <div>
       <label for="name_input">Name</label>
