--- a/home.html
+++ b/home.html
@@ -18,13 +18,14 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 id="heading" style="background-color: #11bb11; border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon HOME</h1>
+    <h1 id="heading" style="border: 5px solid darkblue; color: black; border-radius: 25px;">Pokémon HOME</h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
       <option value="home.html">HOME</option>
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="red.html">Red</option>
+      <option value="green.html">Green</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
@@ -65,6 +66,7 @@
       <option value="violet.html">Violet</option>
       <option value="tealmask.html">Teal Mask</option>
       <option value="indigodisk.html">Indigo Disk</option>
+      <option value="legendsza.html">Legends: Z-A</option>
     </select>
     <div>
       <label for="name_input">Name</label>
