--- a/red.html
+++ b/red.html
@@ -25,6 +25,7 @@
       <option value="index.html">National Dex</option>
       <option value="formdex.html">Alternate Forms</option>
       <option value="home.html">HOME</option>
+      <option value="green.html">Green</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
@@ -65,6 +66,7 @@
       <option value="violet.html">Violet</option>
       <option value="tealmask.html">Teal Mask</option>
       <option value="indigodisk.html">Indigo Disk</option>
+      <option value="legendsza.html">Legends: Z-A</option>
     </select>
     <div>
       <label for="name_input">Name</label>
