--- a/tealmask.html
+++ b/tealmask.html
@@ -9,7 +9,7 @@
     />
     
     <!-- Title Page-->
-    <title>Paldea Pokedex</title>
+    <title>Kitakami Pokedex</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
@@ -18,7 +18,7 @@
   </head>
 
   <body style="text-align: center;">
-    <h1 id="heading" style="background-color: #00a29b; border: 5px solid darkblue; color: white; border-radius: 25px;"><img id="mascot" src="images/1017Ogerpon.png" style="height:50px">The Teal Mask<img id="mascot" src="images/1017Ogerpon.png" style="height:50px"></h1>
+    <h1 id="heading" style="background-color: #00A398; border: 5px solid darkblue; color: white; border-radius: 25px;"><img id="mascot" src="images/1017Ogerpon.png" style="height:50px">The Teal Mask<img id="mascot" src="images/1017Ogerpon.png" style="height:50px"></h1>
     <label for="game_select">Change Dex</label>
     <select name="game" id="game_select" onchange="location = this.value;">
       <option value="tealmask.html">Teal Mask</option>
@@ -26,6 +26,7 @@
       <option value="formdex.html">Alternate Forms</option>
       <option value="home.html">HOME</option>
       <option value="red.html">Red</option>
+      <option value="green.html">Green</option>
       <option value="blue.html">Blue</option>
       <option value="yellow.html">Yellow</option>
       <option value="gold.html">Gold</option>
@@ -65,6 +66,7 @@
       <option value="scarlet.html">Scarlet</option>
       <option value="violet.html">Violet</option>
       <option value="indigodisk.html">Indigo Disk</option>
+      <option value="legendsza.html">Legends: Z-A</option>
     </select>
     <div>
       <label for="name_input">Name</label>
